--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ https://cdn.broadcasthe.net/styles/smpte/style.css
 @import url(https://raw.githubusercontent.com/Willx636/css-btn/3fd4960550c6405d81f5ca69a14daaa7d584bfde/layout.css);
 @import url(https://raw.githubusercontent.com/Willx636/css-btn/3fd4960550c6405d81f5ca69a14daaa7d584bfde/original.css);
 
+-------
+Preview: https://imgbox.com/iJzEp2J8
+Stylesheet URL: https://cdn.jsdelivr.net/gh/3x4nur0u5/beluga@70f6a10/style.css
+--------
+
 *********************************/
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
